# fast-api-demo

./: .gitignore  README.md  package-lock.json  package.json
benchmarks/: run-all.js
examples/: 00-io-vs-cpu-showdown.js  01-blocking-event-loop.js  01-event-loop-deep-dive.js  02-worker-threads-solution.js  03-worker-pool.js  04-native-addon-demo.js  05-wasm-demo.js  06-ecosystem-comparison.js  07-ultimate-architecture.js
examples/01-event-loop-paradox/: async-io-strength.js  blocked-event-loop.js
examples/02-worker-threads/: basic-worker.js  fibonacci-comparison.js  worker-pool.js
native-addons/: README.md
native-addons/cpp-addon/: README.md  binding.gyp  index.js  package.json  test.js
native-addons/cpp-addon/src/: prime_counter.cpp
native-addons/rust-addon/: Cargo.toml  README.md  index.js  package.json  test.js
native-addons/rust-addon/src/: lib.rs
visualization/: index.html
