[package]
name = "rust-prime-counter"
version = "1.0.0"
edition = "2021"
description = "High-performance prime counter native addon for Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3

